crates/formatter/tests/snapshots/snapshots__synapse__main__delta__68__04partial_state_rooms.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- rooms which we have done a partial-state-style join to
create table if not exists partial_state_rooms (
	room_id text primary key,
	foreign key (room_id) references rooms (room_id)
);

-- a list of remote servers we believe are in the room
create table if not exists partial_state_rooms_servers (
	room_id text not null references partial_state_rooms (room_id),
	server_name text not null,
	unique (room_id, server_name)
);

-- a list of events with partial state. We can't store this in the `events` table
-- itself, because `events` is meant to be append-only.
create table if not exists partial_state_events (
	-- the room_id is denormalised for efficient indexing (the canonical source is `events`)
	room_id text not null references partial_state_rooms (room_id),
	event_id text not null references events (event_id),
	unique (event_id)
);

create index if not exists partial_state_events_room_id_idx
	on partial_state_events (room_id);
